--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,6 @@ body {
 	background: black;
 }
 
-* {
-	border: 1px dashed red;
-	min-height: 10px;
-}
-
 .postcard {
 	background: white;
 	width: 400px;
@@ -44,7 +39,7 @@ h1 {
 input {
 	border: none;
 	border-bottom: 0.1px solid grey;
-	font-family: "Courier New", Courier, monospace;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 p {
